--- a/DerbyScoreBoard/SpectatorWindow.xib
+++ b/DerbyScoreBoard/SpectatorWindow.xib
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="Gotham-Medium.otf">
+            <string>Gotham-Medium</string>
+            <string>Gotham-Medium</string>
+        </mutableArray>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NIZSpectatorScreenViewController">
             <connections>
@@ -12,34 +19,49 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <window opaque="NO" clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleToFill" id="Na2-4i-xf1">
-            <rect key="frame" x="0.0" y="0.0" width="778" height="432"/>
+            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1nP-2l-Ekd">
-                    <rect key="frame" x="178" y="83" width="423" height="265"/>
+                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fVR-zL-TUF">
+                    <rect key="frame" x="87" y="209" width="427" height="298"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Second screen" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T7M-Km-cE9">
-                            <rect key="frame" x="131" y="101" width="160" height="64"/>
-                            <color key="backgroundColor" red="0.86936549462218526" green="1" blue="0.58040661956033934" alpha="1" colorSpace="calibratedRGB"/>
-                            <accessibility key="accessibilityConfiguration">
-                                <accessibilityTraits key="traits" none="YES" staticText="YES" notEnabled="YES"/>
-                                <bool key="isElement" value="NO"/>
-                            </accessibility>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="00:00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="y2X-VF-lht" userLabel="spectJamClock">
+                            <rect key="frame" x="8" y="19" width="411" height="212"/>
+                            <fontDescription key="fontDescription" name="Gotham-Medium" family="Gotham" pointSize="70"/>
+                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="00:00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="25" translatesAutoresizingMaskIntoConstraints="NO" id="Erj-4e-58l" userLabel="spectBoutClock">
+                            <rect key="frame" x="8" y="222" width="411" height="68"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="68" id="L5z-RB-BdW"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" name="Gotham-Medium" family="Gotham" pointSize="50"/>
                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
-                    <color key="backgroundColor" red="1" green="0.75405436413306404" blue="0.71413660731591255" alpha="1" colorSpace="calibratedRGB"/>
-                    <accessibility key="accessibilityConfiguration">
-                        <accessibilityTraits key="traits" none="YES" notEnabled="YES"/>
-                    </accessibility>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstItem="Erj-4e-58l" firstAttribute="trailing" secondItem="y2X-VF-lht" secondAttribute="trailing" id="0Zh-JE-QDT"/>
+                        <constraint firstItem="Erj-4e-58l" firstAttribute="leading" secondItem="fVR-zL-TUF" secondAttribute="leadingMargin" id="BAD-GC-fcH"/>
+                        <constraint firstItem="y2X-VF-lht" firstAttribute="leading" secondItem="Erj-4e-58l" secondAttribute="leading" id="FV0-HE-yHV"/>
+                        <constraint firstItem="Erj-4e-58l" firstAttribute="bottom" secondItem="fVR-zL-TUF" secondAttribute="bottomMargin" id="S6Z-XC-vCc"/>
+                        <constraint firstAttribute="bottom" secondItem="y2X-VF-lht" secondAttribute="bottom" constant="67" id="gg9-0K-0hJ"/>
+                        <constraint firstItem="y2X-VF-lht" firstAttribute="top" secondItem="fVR-zL-TUF" secondAttribute="top" constant="19" id="m1z-k0-AdQ"/>
+                        <constraint firstItem="y2X-VF-lht" firstAttribute="trailing" secondItem="fVR-zL-TUF" secondAttribute="trailingMargin" id="uua-WG-9Os"/>
+                    </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" red="0.29176415989054383" green="1" blue="0.78209714029363042" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" red="0.29176415989999999" green="1" blue="0.78209714029999999" alpha="1" colorSpace="calibratedRGB"/>
+            <constraints>
+                <constraint firstItem="fVR-zL-TUF" firstAttribute="centerY" secondItem="Na2-4i-xf1" secondAttribute="centerY" id="QfV-yv-f3j"/>
+                <constraint firstItem="fVR-zL-TUF" firstAttribute="centerX" secondItem="Na2-4i-xf1" secondAttribute="centerX" id="RKm-mW-9pr"/>
+                <constraint firstItem="fVR-zL-TUF" firstAttribute="leading" secondItem="Na2-4i-xf1" secondAttribute="leading" constant="87" id="Vde-D2-frW"/>
+                <constraint firstItem="fVR-zL-TUF" firstAttribute="top" secondItem="Na2-4i-xf1" secondAttribute="top" constant="209" id="s4B-jk-KJE"/>
+            </constraints>
             <nil key="simulatedStatusBarMetrics"/>
-            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="661" y="199"/>
+            <point key="canvasLocation" x="715" y="282"/>
         </window>
     </objects>
 </document>
