--- a/DerbyScoreBoard/SpectatorWindow.xib
+++ b/DerbyScoreBoard/SpectatorWindow.xib
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="Gotham-Medium.otf">
@@ -14,54 +13,69 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NIZSpectatorScreenViewController">
             <connections>
+                <outlet property="specBoutClockLabel" destination="Erj-4e-58l" id="NbE-Gn-kIm"/>
+                <outlet property="specClockView" destination="fVR-zL-TUF" id="evN-h7-5QI"/>
+                <outlet property="specJamClockLabel" destination="y2X-VF-lht" id="Aan-Bp-Xir"/>
+                <outlet property="specPeriodClockLabel" destination="6S6-Kw-Vh7" id="ar0-MI-Rya"/>
                 <outlet property="view" destination="Na2-4i-xf1" id="cfr-YY-f8w"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <window opaque="NO" clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleToFill" id="Na2-4i-xf1">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+        <window opaque="NO" clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" placeholderIntrinsicWidth="1280" placeholderIntrinsicHeight="720" id="Na2-4i-xf1">
+            <rect key="frame" x="0.0" y="0.0" width="1080" height="720"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fVR-zL-TUF">
-                    <rect key="frame" x="87" y="209" width="427" height="298"/>
+                <view autoresizesSubviews="NO" userInteractionEnabled="NO" contentMode="center" translatesAutoresizingMaskIntoConstraints="NO" id="yc0-m4-Lh9" userLabel="Main">
+                    <rect key="frame" x="0.0" y="0.0" width="1080" height="720"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="00:00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="y2X-VF-lht" userLabel="spectJamClock">
-                            <rect key="frame" x="8" y="19" width="411" height="212"/>
-                            <fontDescription key="fontDescription" name="Gotham-Medium" family="Gotham" pointSize="70"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="00:00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="25" translatesAutoresizingMaskIntoConstraints="NO" id="Erj-4e-58l" userLabel="spectBoutClock">
-                            <rect key="frame" x="8" y="222" width="411" height="68"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="68" id="L5z-RB-BdW"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" name="Gotham-Medium" family="Gotham" pointSize="50"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fVR-zL-TUF" userLabel="Clock">
+                            <rect key="frame" x="245" y="232" width="590" height="256"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" placeholderIntrinsicWidth="427" placeholderIntrinsicHeight="100" text="00:00:00" textAlignment="center" lineBreakMode="clip" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Erj-4e-58l" userLabel="spectBoutClock">
+                                    <rect key="frame" x="0.0" y="156" width="590" height="100"/>
+                                    <color key="backgroundColor" red="0.043251439144736843" green="0.30923622532894735" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <accessibility key="accessibilityConfiguration">
+                                        <accessibilityTraits key="traits" none="YES" staticText="YES" notEnabled="YES" updatesFrequently="YES"/>
+                                        <bool key="isElement" value="NO"/>
+                                    </accessibility>
+                                    <fontDescription key="fontDescription" name="Gotham-Medium" family="Gotham" pointSize="100"/>
+                                    <color key="textColor" red="1" green="0.3092362253" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                    <size key="shadowOffset" width="0.0" height="0.0"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" placeholderIntrinsicWidth="427" placeholderIntrinsicHeight="156" text="00:00" textAlignment="center" lineBreakMode="clip" baselineAdjustment="none" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y2X-VF-lht" userLabel="spectJamClock">
+                                    <rect key="frame" x="0.0" y="0.0" width="590" height="156"/>
+                                    <color key="backgroundColor" red="1" green="0.30923622532894735" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <accessibility key="accessibilityConfiguration">
+                                        <accessibilityTraits key="traits" none="YES" staticText="YES" notEnabled="YES" updatesFrequently="YES"/>
+                                        <bool key="isElement" value="NO"/>
+                                    </accessibility>
+                                    <fontDescription key="fontDescription" name="Gotham-Medium" family="Gotham" pointSize="180"/>
+                                    <color key="textColor" red="0.04325143914" green="0.3092362253" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                    <size key="shadowOffset" width="0.0" height="0.0"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </view>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6S6-Kw-Vh7" userLabel="specPreJamClockLabel">
+                            <rect key="frame" x="245" y="165" width="590" height="66"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" red="1" green="0.3092362253" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstItem="Erj-4e-58l" firstAttribute="trailing" secondItem="y2X-VF-lht" secondAttribute="trailing" id="0Zh-JE-QDT"/>
-                        <constraint firstItem="Erj-4e-58l" firstAttribute="leading" secondItem="fVR-zL-TUF" secondAttribute="leadingMargin" id="BAD-GC-fcH"/>
-                        <constraint firstItem="y2X-VF-lht" firstAttribute="leading" secondItem="Erj-4e-58l" secondAttribute="leading" id="FV0-HE-yHV"/>
-                        <constraint firstItem="Erj-4e-58l" firstAttribute="bottom" secondItem="fVR-zL-TUF" secondAttribute="bottomMargin" id="S6Z-XC-vCc"/>
-                        <constraint firstAttribute="bottom" secondItem="y2X-VF-lht" secondAttribute="bottom" constant="67" id="gg9-0K-0hJ"/>
-                        <constraint firstItem="y2X-VF-lht" firstAttribute="top" secondItem="fVR-zL-TUF" secondAttribute="top" constant="19" id="m1z-k0-AdQ"/>
-                        <constraint firstItem="y2X-VF-lht" firstAttribute="trailing" secondItem="fVR-zL-TUF" secondAttribute="trailingMargin" id="uua-WG-9Os"/>
-                    </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" red="0.29176415989999999" green="1" blue="0.78209714029999999" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="fVR-zL-TUF" firstAttribute="centerY" secondItem="Na2-4i-xf1" secondAttribute="centerY" id="QfV-yv-f3j"/>
-                <constraint firstItem="fVR-zL-TUF" firstAttribute="centerX" secondItem="Na2-4i-xf1" secondAttribute="centerX" id="RKm-mW-9pr"/>
-                <constraint firstItem="fVR-zL-TUF" firstAttribute="leading" secondItem="Na2-4i-xf1" secondAttribute="leading" constant="87" id="Vde-D2-frW"/>
-                <constraint firstItem="fVR-zL-TUF" firstAttribute="top" secondItem="Na2-4i-xf1" secondAttribute="top" constant="209" id="s4B-jk-KJE"/>
+                <constraint firstAttribute="bottom" secondItem="yc0-m4-Lh9" secondAttribute="bottom" id="U71-fY-Xqh"/>
+                <constraint firstItem="yc0-m4-Lh9" firstAttribute="top" secondItem="Na2-4i-xf1" secondAttribute="top" id="fL2-kh-l6H"/>
+                <constraint firstItem="yc0-m4-Lh9" firstAttribute="leading" secondItem="Na2-4i-xf1" secondAttribute="leading" id="nOB-gt-Hv6"/>
+                <constraint firstAttribute="trailing" secondItem="yc0-m4-Lh9" secondAttribute="trailing" id="w8B-c7-9qe"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
-            <point key="canvasLocation" x="715" y="282"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="1170" y="323"/>
         </window>
     </objects>
 </document>
