--- a/DerbyScoreBoard/en.lproj/MainStoryboard.storyboard
+++ b/DerbyScoreBoard/en.lproj/MainStoryboard.storyboard
@@ -416,11 +416,11 @@
                                     <action selector="visitorTeamNameDidEndEditing:" destination="1ut-hq-t66" eventType="editingDidEnd" id="YSR-xQ-bSu"/>
                                 </connections>
                             </textField>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="visitorTeamTableViewRoster" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="86" sectionHeaderHeight="22" sectionFooterHeight="22" id="wpX-Cb-533">
+                            <tableView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="visitorTeamTableViewRoster" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="86" sectionHeaderHeight="22" sectionFooterHeight="22" id="wpX-Cb-533">
                                 <rect key="frame" x="524" y="205" width="480" height="268"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <color key="separatorColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="separatorColor" red="0.43137254899999999" green="0.43137254899999999" blue="0.43137254899999999" alpha="1" colorSpace="deviceRGB"/>
                                 <color key="sectionIndexColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" restorationIdentifier="VisitorPlayerCell" selectionStyle="none" indentationWidth="10" reuseIdentifier="VistorPlayerCell" rowHeight="86" id="RqG-WM-aBE" userLabel="VisitorPlayerCell" customClass="NIZPlayerTableViewCell">
@@ -567,6 +567,8 @@
                                 <rect key="frame" x="20" y="205" width="480" height="268"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="separatorColor" red="0.43137254899999999" green="0.43137254899999999" blue="0.43137254899999999" alpha="1" colorSpace="deviceRGB"/>
+                                <color key="sectionIndexColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" restorationIdentifier="HomePlayerCell" selectionStyle="none" indentationWidth="10" reuseIdentifier="HomePlayerCell" rowHeight="86" id="mH7-5r-lyl" userLabel="HomePlayerCell" customClass="NIZPlayerTableViewCell">
                                         <rect key="frame" x="0.0" y="0.0" width="480" height="44"/>
