--- a/DerbyScoreBoard/en.lproj/MainStoryboard.storyboard
+++ b/DerbyScoreBoard/en.lproj/MainStoryboard.storyboard
@@ -697,7 +697,7 @@
                                 <color key="separatorColor" red="0.43137254899999999" green="0.43137254899999999" blue="0.43137254899999999" alpha="1" colorSpace="deviceRGB"/>
                                 <color key="sectionIndexColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" restorationIdentifier="HomePlayerCell" selectionStyle="none" indentationWidth="10" reuseIdentifier="HomePlayerCell" rowHeight="86" id="2ro-Lw-ozl" userLabel="HomePlayerCell" customClass="NIZPlayerTableViewCell">
+                                    <tableViewCell contentMode="scaleToFill" restorationIdentifier="PlayerCell" selectionStyle="none" indentationWidth="10" reuseIdentifier="PlayerCell" rowHeight="86" id="2ro-Lw-ozl" userLabel="PlayerCell" customClass="NIZPlayerTableViewCell">
                                         <rect key="frame" x="0.0" y="0.0" width="480" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2ro-Lw-ozl" id="7bU-XQ-PzU">
@@ -822,7 +822,7 @@
                                 <color key="separatorColor" red="0.43137254899999999" green="0.43137254899999999" blue="0.43137254899999999" alpha="1" colorSpace="deviceRGB"/>
                                 <color key="sectionIndexColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" restorationIdentifier="HomePlayerCell" selectionStyle="none" indentationWidth="10" reuseIdentifier="HomePlayerCell" rowHeight="86" id="bTU-MR-UqQ" userLabel="HomePlayerCell" customClass="NIZPlayerTableViewCell">
+                                    <tableViewCell contentMode="scaleToFill" restorationIdentifier="PlayerCell" selectionStyle="none" indentationWidth="10" reuseIdentifier="PlayerCell" rowHeight="86" id="bTU-MR-UqQ" userLabel="PlayerCell" customClass="NIZPlayerTableViewCell">
                                         <rect key="frame" x="0.0" y="0.0" width="480" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bTU-MR-UqQ" id="3W2-SQ-h2O">
